--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,8 @@ body  {
 	color: #000000;
 	font-weight: bold;
 	padding-top: 41px;
+  width: 455px;
+  margin-left: 373px;
 }
 
 .advantages p {
@@ -80,8 +82,8 @@ body  {
 	line-height: 21px;
 	color: #7d7d7d;
 	font-weight: normal;
-	margin-top: 28px;
-	margin-left: 24px;
+	margin-top: 27px;
+	margin-left: 54px;
 	margin-right: 25px;
 }
 
@@ -318,8 +320,8 @@ input[placeholder]:active {
 	color: #ffffff;
 	font-weight: bold;
 	text-transform: uppercase;
-	margin-top: 66px;
-	margin-left: 55px;
+	margin-top: 54px;
+	margin-left: 54px;
 }
 
 .seek:hover,
@@ -426,18 +428,24 @@ input[placeholder]:active {
 .seriosly h3 {
 	color: #ffffff;
 	margin-top: 48px;
+  width: 138px;
+  margin-left: 133px;
 }
 
 .seriosly p {
 	color: #ffffff;
 	margin-top: 22px;
-  margin-left: 22px;
+  margin-left: 51px;
+  width: 288px;
 }
 
 .services {
 	margin-top: 0;
 }
 
+.services p {
+  width: 290px;
+}
 .services li {
 	width: 33.33%;
 }
@@ -473,6 +481,8 @@ input[placeholder]:active {
 .diablo p {
 	color: #ffffff;
   margin-top: 23px;
+  margin-left: 42px;
+  width: 308px;
 }
 
 .privilege li {
@@ -488,11 +498,16 @@ input[placeholder]:active {
 	margin-top: -16px;
 }
 
+.reason p {
+  width: 275px;
+  margin-top: 22px;
+  margin-left: 60px;
+}
+
 .reason li {
 	width: 400px;
 	align-self: center;
 	margin-right: 33px;
-	margin-left: 35px;
   margin-top: 7px;
 }
 
@@ -553,14 +568,14 @@ input[placeholder]:active {
 	text-align: center;
 	align-self: center;
 	margin-top: -8px;
-  margin-left: 127px;
+  margin-left: 91px;
 }
 
 .social-buttons {
 	width: 1056px;
 	margin-top: 20px;
-	margin-left: 255px;
 	margin-bottom: 20px;
+  text-align: center;
 }
 
 .footer-copyright {
@@ -571,7 +586,7 @@ input[placeholder]:active {
 	align-self: center;
 	display: flex;
 	height: 60px;
-	margin-right: 50px;
+	margin-right: -85px;
   margin-top: 7px;
 }
 
@@ -1140,6 +1155,8 @@ p.stock {
 
 .reason h3 {
   margin: 0;
+  width: 127px;
+  margin-left: 136px;
 }
 
 .indicate-txt {
